# insieme

./: .clang-format  .doxygen  .gitattributes  .gitignore  CMakeLists.txt  QUICKSTART  README.md  README_new.md  build_readme  test.cfg
code/: .cproject  .gitignore  CMakeLists.txt  Doxyfile.in  add_unit_test.cmake  environment.cmake  environment_common.cmake  gtest-parallel-single.rb  gtest-parallel.py  gtest-parallel.rb  integration_test_config.in  lookup_lib.cmake
code/analysis/: CMakeLists.txt
code/analysis/cmake/: cmake_config.h.in
code/analysis/src/: access.cpp  alias_map.cpp  cba_postprocessing.cpp  cfg.cpp  code_properties.cpp  datadep.cpp  defuse_collect.cpp  dep_graph.cpp  features_collect.cpp  func_sema.cpp  function_db.def  polyhedral.cpp  scop.cpp  scopes_map.cpp  souffle_interface.cpp  tmp_vap_map.cpp  varpointsto_example.cpp
code/analysis/test/: access_test.cc  alias_analysis_test.cc  boolean_analysis_test.cc  boolean_value_test.cc  cba_inputs_test.cc  cfg_builder_test.cc  cfg_test.cc  code_properties_test.cc  datadep_test.cc  defuse_test.cc  dep_graph_test.cc  dependence_test.cc  haskell_adapter_test.cc  input_spec_test.cc  integer_analysis_test.cc  interface_test.cc  isl_backend_test.cc  node_count_test.cc  polyhedral_test.cc  polyhedral_trans.cc  scop_test.cc  scope_map_test.cc  souffle_interface_test.cc  varpointsto_example_test.cc
code/annotations/: CMakeLists.txt
code/annotations/src/: backend_instantiate.cpp  data_annotations.cpp  decl_only.cpp  expected_ir_annotation.cpp  extern.cpp  extern_c.cpp  include.cpp  include_file.cpp  info.cpp  location.cpp  loop_annotations.cpp  mpi_annotations.cpp  naming.cpp  ocl_annotations.cpp  std_init_list.cpp  transform.cpp
code/annotations/test/: extern.cc  extern_c.cc  loop_annotations.cc  meta_info.cc  naming.cc  ocl_annotations.cc
code/backend/: CMakeLists.txt
code/backend/cmake/: kernel_config.h.in  ocl_standalone_config.h.in
code/backend/src/: backend.cpp  converter.cpp  full_backend.cpp  function_manager.cpp  includes.def  ir_extensions.cpp  name_manager.cpp  operator_converter.cpp  postprocessor.cpp  preprocessor.cpp  statement_converter.cpp  type_manager.cpp  variable_manager.cpp
code/backend/test/: backend_interceptor_test.cc  code_snippets_test.cc  code_snippets_test_utils.h  function_manager_test.cc  operator_converter_test.cc  preprocessor_test.cc  type_manager_test.cc
code/c_info/: CMakeLists.txt
code/c_info/include/: location.h  naming.h  ocl_annotations.h  omp_annotation.h
code/c_info/src/: location.cpp  naming.cpp  ocl_annotations.cpp  omp_annotation.cpp
code/c_info/test/: naming.cc  ocl_annotations.cc
code/cmake/: FindBARVINOK.cmake  FindBISON.cmake  FindCLOOG.cmake  FindCUDD.cmake  FindFLEX.cmake  FindGMP.cmake  FindHwloc.cmake  FindISL.cmake  FindKOMPEX.cmake  FindLLVM.cmake  FindLUAJIT.cmake  FindMPFR.cmake  FindPAPI.cmake  FindSHARK.cmake  FindValgrind.cmake  FindXerces.cmake  FindZLIB.cmake  add_souffle.cmake  add_unit_test.cmake  default_library_configuration.cmake  insieme_cotire.cmake  insieme_find_package.cmake  insieme_fix_case_name.cmake  insieme_glob_headers.cmake  msvc_file_completion.cmake
code/common/: CMakeLists.txt
code/core/: .gitignore  CMakeLists.txt  builderbuilder.rb  ir_nodes.def  nodegenerator.rb
code/core/include/: annotated_ptr.h  annotation.h  ast_address.h  ast_builder.h  ast_builder.inl  ast_builder_decls.inl  ast_check.h  ast_manager.h  ast_navigating_visitor.h  ast_node.h  ast_nodes.def  ast_statistic.h  ast_visitor.h  definition.h  definitions.h  expressions.h  functions.h  identifier.h  identifiers.h  int_type_param.h  ir_parse.h  lang_basic.h  program.h  programs.h  statements.h  transformation.h  tree_manager.h  type_manager.h  type_utils.h  types.h  types_utils.h  visitor.h  visitor2.h  visitor3.h  xml_dump.h
code/core/scripts/: builderbuilder.rb
code/core/src/: annotation.cpp  ast_address.cpp  ast_builder.cpp  ast_builder_impl.inl  ast_check.cpp  ast_navigating_visitor.cpp  ast_node.cpp  ast_statistic.cpp  definition.cpp  definitions.cpp  defintions.cpp  expressions.cpp  frontend_ir_builder.cpp  functions.cpp  identifier.cpp  identifiers.cpp  int_type_param.cpp  ir_address.cpp  ir_builder.cpp  ir_check.cpp  ir_class_info.cpp  ir_expressions.cpp  ir_instance.cpp  ir_int_type_param.cpp  ir_node.cpp  ir_node_annotation.cpp  ir_node_tryout.cpp  ir_node_tryout.cpp_old  ir_node_types.cpp  ir_parse.cpp  ir_program.cpp  ir_statements.cpp  ir_statistic.cpp  ir_types.cpp  lang_basic.cpp  main.cpp  new_int_type_param.cpp  placeholder.cpp  program.cpp  programs.cpp  (+5 more)
code/core/test/: annotated_ptr_test.cc  annotation_test.cc  ast_address_test.cc  ast_check_test.cc  ast_manager_test.cc  ast_navigating_visitor_test.cc  ast_node_test.cc  ast_statistic_test.cc  ast_visitor_test.cc  builder_test.cc  definition_test.cc  definitions_test.cc  expressions_test.cc  functions_test.cc  identifier_test.cc  identifiers_test.cc  imperative_checks_test.cc  int_type_param_test.cc  ir_address_test.cc  ir_builder_test.cc  ir_check_test.cc  ir_class_info_test.cc  ir_expressions_test.cc  ir_instance_test.cc  ir_int_type_param_test.cc  ir_node_path_test.cc  ir_node_test.cc  ir_node_tryout.cc  ir_node_type_test.cc  ir_node_usability.cc  ir_parse_test.cc  ir_pointer_test.cc  ir_program_test.cc  ir_statements_test.cc  ir_statistic_test.cc  ir_types_test.cc  ir_value_test.cc  (+23 more)
code/driver/: CMakeLists.txt
code/experiments/: CMakeLists.txt
code/frontend/: .gitignore  CMakeLists.txt  generate_builtins.rb  generate_builtins_gcc_builtins.template
code/iwir/: CMakeLists.txt
code/machine_learning/: CMakeLists.txt
code/opencl_backend/: CMakeLists.txt
code/runtime/: CMakeLists.txt
code/simple_backend/: CMakeLists.txt
code/transform/: CMakeLists.txt
code/utils/: CMakeLists.txt
code/xml/: CMakeLists.txt
docs/: CMakeLists.txt  UseLATEX.cmake  git_standards.txt
docs/insieme_dev_doc/: .gitignore  01_introduction.tex  02_overview.tex  03_compiler.tex  04_runtime.tex  05_infrastructure.tex  06_credits.tex  CMakeLists.txt  Makefile  biblio.bib  insieme_doc.tex
(+6337 files in other folders)
